Fri Aug 18 17:49:00 BST 2000 Olly Betts

	* Pruned completed and no-longer-relevant tasks from TODO.

	* DatabaseBuilder now throws OmFeatureUnavailableError rather than
	  OmOpeningError if you try to use a backend which isn't compiled in.

	* Added checks for correct handling of unknown and unavailable
	  backends by DatabaseBuilder.

Fri Aug 18 16:22:00 BST 2000 Olly Betts

	* WARNING: Incompatible (minor) changes to API!

	* OmSettings::get_value* -> OmSettings::get*
	  OmSettings::set_value -> OmSettings::set

Fri Aug 18 16:03:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix to configuration system so that it runs the test programs -
	  it should now complain if the wrong versions of sleepycat libraries
	  are lying about.

Fri Aug 18 15:39:00 BST 2000 Olly Betts

	* WARNING: Incompatible (minor) changes to API!

	* OmMatchDecider::operator() now takes a const reference rather than
	  a const pointer.  Removed warning that arguments to this method
	  are highly likely to change.

	* Changed a few methods to take const references to avoid
	  unnecessary object copying (changes API, but code using API won't
	  need changing).

Fri Aug 18 14:31:00 BST 2000 Olly Betts

	* OmBatchEnquire::batch_result no longer public - instead
	  OmBatchEnquire::Internal is a friend class.

Fri Aug 18 13:58:00 BST 2000 Olly Betts

	* Added documentation of valid settings to OmSettings doc comments.

Fri Aug 18 12:34:00 BST 2000 Olly Betts

	* Dervied classes of IRDatabase now implement do_open_post_list,
	  with open_post_list now a wrapper in the base class which checks
	  whether the term exists and returns EmptyPostList if it doesn't.

	* LocalMatch: EmptyPostList-s now always have a weight.

	* apitest: Added maxorterms3 to check that maxorterms doesn't affect
	  results if no term are discarded; fixed qterminfo1 as non-existant
	  terms now *do* have a weight.

	* backendmanager.cc: Now close and reopen a freshly built sleepycat