@@ -137,12 +137,12 @@ if test "x$have_berkeley_3_1_cxx" != "xyes"; then
   SLEEPYCAT_LINKFLAGS="-L/usr/local/BerkeleyDB.3.1/lib"
   SLEEPYCAT_LIBS="-ldb_cxx"
 
-  have_sleepy_cxx=no
+  have_sleepycat_cxx=no
   AC_MSG_CHECKING([for C++ interface to Berkeley DB, version 3.1, in /usr/local/BerkeleyDB.3.1])
   RJB_CHECK_BERKELEYDB(major==3 && minor==1)
-  AC_MSG_RESULT($have_sleepy_cxx)
+  AC_MSG_RESULT($have_sleepycat_cxx)
 
-  if test "x$have_sleepy_cxx" = "xyes"; then
+  if test "x$have_sleepycat_cxx" = "xyes"; then
     have_berkeley_3_1_cxx=yes
     BERKELEY_3_1_LIBS="$SLEEPYCAT_LIBS"
     BERKELEY_3_1_INCLUDES="$SLEEPYCAT_INCLUDES"
@@ -157,12 +157,12 @@ if test "x$have_berkeley_3_1_cxx" != "xyes"; then
   SLEEPYCAT_LINKFLAGS="-L/usr/local/BerkeleyDB/lib"
   SLEEPYCAT_LIBS="-ldb_cxx"
 
-  have_sleepy_cxx=no
+  have_sleepycat_cxx=no
   AC_MSG_CHECKING([for C++ interface to Berkeley DB, version 3.1, in /usr/local/BerkeleyDB])
   RJB_CHECK_BERKELEYDB(major==3 && minor==1)
-  AC_MSG_RESULT($have_sleepy_cxx)
+  AC_MSG_RESULT($have_sleepycat_cxx)
 
-  if test "x$have_sleepy_cxx" = "xyes"; then
+  if test "x$have_sleepycat_cxx" = "xyes"; then
     have_berkeley_3_1_cxx=yes
     BERKELEY_3_1_LIBS="$SLEEPYCAT_LIBS"
     BERKELEY_3_1_INCLUDES="$SLEEPYCAT_INCLUDES"
@@ -177,12 +177,12 @@ if test "x$have_berkeley_3_1_cxx" != "xyes"; then
   SLEEPYCAT_INCLUDES="-I/usr/include/db"
   SLEEPYCAT_LINKFLAGS=
 
-  have_sleepy_cxx=no
+  have_sleepycat_cxx=no
   AC_MSG_CHECKING([for C++ interface to Berkeley DB, version 3.1, in /usr/include/db2])
   RJB_CHECK_BERKELEYDB(major==3 && minor==1)
-  AC_MSG_RESULT($have_sleepy_cxx)
+  AC_MSG_RESULT($have_sleepycat_cxx)
 
-  if test "x$have_sleepy_cxx" = "xyes"; then
+  if test "x$have_sleepycat_cxx" = "xyes"; then
     have_berkeley_3_1_cxx=yes
     BERKELEY_3_1_LIBS="$SLEEPYCAT_LIBS"
     BERKELEY_3_1_INCLUDES="$SLEEPYCAT_INCLUDES"
@@ -198,12 +198,12 @@ if test "x$have_berkeley_2_x_cxx" != "xyes"; then
   SLEEPYCAT_INCLUDES="-I/usr/local/BerkeleyDB/include"
   SLEEPYCAT_LINKFLAGS="-L/usr/local/BerkeleyDB/lib/"
   
-  have_sleepy_cxx=no
+  have_sleepycat_cxx=no
   AC_MSG_CHECKING([for C++ interface to Berkeley DB, version 2.x, in /usr/local/BerkeleyDB])
   RJB_CHECK_BERKELEYDB(major==2)
-  AC_MSG_RESULT($have_sleepy_cxx)
+  AC_MSG_RESULT($have_sleepycat_cxx)
 
-  if test "x$have_sleepy_cxx" = "xyes"; then
+  if test "x$have_sleepycat_cxx" = "xyes"; then
     have_berkeley_2_x_cxx=yes
     BERKELEY_2_x_LIBS="$SLEEPYCAT_LIBS"
     BERKELEY_2_x_INCLUDES="$SLEEPYCAT_INCLUDES"
@@ -217,12 +217,12 @@ if test "x$have_berkeley_2_x_cxx" != "xyes"; then
   SLEEPYCAT_INCLUDES="-I/usr/include/db2"
   SLEEPYCAT_LINKFLAGS=
 
-  have_sleepy_cxx=no
+  have_sleepycat_cxx=no
   AC_MSG_CHECKING([for C++ interface to Berkeley DB, version 2.x, in /usr/include/db2])
   RJB_CHECK_BERKELEYDB(major==2)
-  AC_MSG_RESULT($have_sleepy_cxx)
+  AC_MSG_RESULT($have_sleepycat_cxx)
 
-  if test "x$have_sleepy_cxx" = "xyes"; then
+  if test "x$have_sleepycat_cxx" = "xyes"; then
     have_berkeley_2_x_cxx=yes
     BERKELEY_2_x_LIBS="$SLEEPYCAT_LIBS"
     BERKELEY_2_x_INCLUDES="$SLEEPYCAT_INCLUDES"
@@ -244,13 +244,13 @@ AC_ARG_ENABLE(backend_muscat36,
   *) AC_MSG_ERROR(bad value ${enableval} for --enable-backend-muscat36) ;;
 esac],[build_muscat36=true])
 
-AC_ARG_ENABLE(backend_sleepy,
-[  --enable-backend-sleepy Enable the sleepycat database backend (default=yes)],
+AC_ARG_ENABLE(backend_sleepycat,
+[  --enable-backend-sleepycat Enable the sleepycat database backend (default=yes)],
 [case "${enableval}" in
-  yes) build_sleepy=true ;;
-  no)  build_sleepy=false ;;
-  *) AC_MSG_ERROR(bad value ${enableval} for --enable-backend-sleepy) ;;
-esac],[build_sleepy=true])
+  yes) build_sleepycat=true ;;
+  no)  build_sleepycat=false ;;
+  *) AC_MSG_ERROR(bad value ${enableval} for --enable-backend-sleepycat) ;;
+esac],[build_sleepycat=true])
 
 AC_ARG_ENABLE(backend_quartz,
 [  --enable-backend-quartz Enable the quartz database backend (default=no)],
@@ -338,10 +338,10 @@ dnl Turn off compilation of anything that we don't have the requirements for
 
 
 if test "x$have_berkeley_2_x_cxx" != "xyes"; then
-  if test ! "x$build_sleepy" = "xfalse"; then
+  if test ! "x$build_sleepycat" = "xfalse"; then
     AC_MSG_WARN(Sleepycat database library not available: not building support);
   fi
-  build_sleepy=false;
+  build_sleepycat=false;
 fi
 
 if test "x$have_berkeley_3_1_cxx" != "xyes"; then
@@ -361,7 +361,7 @@ fi
 dnl Set conditionals to specify what we compile
 
 AM_CONDITIONAL(BUILD_BACKEND_MUSCAT36, test x$build_muscat36 = xtrue)
-AM_CONDITIONAL(BUILD_BACKEND_SLEEPY, test x$build_sleepy = xtrue)
+AM_CONDITIONAL(BUILD_BACKEND_SLEEPYCAT, test x$build_sleepycat = xtrue)
 AM_CONDITIONAL(BUILD_BACKEND_QUARTZ, test x$build_quartz = xtrue)
 AM_CONDITIONAL(BUILD_BACKEND_INMEMORY, test x$build_inmemory = xtrue)
 AM_CONDITIONAL(BUILD_BACKEND_MULTI, test x$build_multi = xtrue)
@@ -375,8 +375,8 @@ AC_DEFINE(MUS_BUILD_BACKEND_MUSCAT36,,
   [Define if you want to build the (old) Muscat 3.6 backend])
 fi
 
-if test x$build_sleepy = xtrue; then
-AC_DEFINE(MUS_BUILD_BACKEND_SLEEPY,,
+if test x$build_sleepycat = xtrue; then
+AC_DEFINE(MUS_BUILD_BACKEND_SLEEPYCAT,,
   [Define if you want to build sleepycat backend])
 fi
 
@@ -595,7 +595,7 @@ AC_OUTPUT(
  common/Makefile
  backends/Makefile
  backends/muscat36/Makefile
- backends/sleepy/Makefile
+ backends/sleepycat/Makefile
  backends/quartz/Makefile
  backends/multi/Makefile
  backends/inmemory/Makefile
