@@ -1,4 +1,4 @@
-/* testsuite.cc - a test suite engine
+/* testsuite.cc: a test suite engine
  *
  * ----START-LICENCE----
  * Copyright 1999,2000 BrightStation PLC
