@@ -1,3 +1,10 @@
+Sat Aug 19 12:30:00 BST 2000 Olly Betts
+
+	* Naming consistency - now always say "sleepycat" never "sleepy".
+	  Only externally visible effect is in options to configure.
+
+	* A few header multiple inclusion guards were misnamed - fixed.
+
 Fri Aug 18 17:49:00 BST 2000 Olly Betts
 
 	* Pruned completed and no-longer-relevant tasks from TODO.
